--- a/creditcarddesign/src/main/res/values/strings.xml
+++ b/creditcarddesign/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
-    <string name="app_name">CheckoutFlow</string>
+    <string name="app_name" translatable="false">CheckoutFlow</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings" translatable="false">Settings</string>
 
     <string name="next">NEXT</string>
     <string name="previous">PREVIOUS</string>
